# azula

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  fib.ll  install.sh  prime.azl  run_tests.sh  shard.yml  test.azl  test.ll  test1.azl
.github/workflows/: crystal.yml
ast/: Cargo.toml
ast/src/: ast.rs  lib.rs
azula_cli/: Cargo.toml
azula_cli/src/: lib.rs
azula_ir/: Cargo.toml
azula_ir/src/: instruction.rs  lib.rs  module.rs
azula_type/: Cargo.toml
azula_type/src/: azula_type.rs  lib.rs
codegen/: Cargo.toml
codegen/src/: codegen.rs  lib.rs
codegen/src/backend/: backend.rs  mod.rs
codegen_llvm/: Cargo.toml
codegen_llvm/src/: lib.rs  llvm.rs
docs/: Azula.html  README.md  index.html  index.json  search-index.js  toplevel.html
docs/Azula/: AST.html  Compiler.html  Error.html  ErrorManager.html  Lexer.html  OperatorPrecedence.html  Parser.html  Token.html  TokenType.html  Types.html
docs/Azula/AST/: Access.html  ArrayAccess.html  ArrayExp.html  Assign.html  Block.html  BooleanLiteral.html  Continue.html  Expression.html  ExpressionStatement.html  ExternFunction.html  FloatLiteral.html  Function.html  FunctionCall.html  Identifier.html  If.html  Import.html  Infix.html  IntegerLiteral.html  Macro.html  Node.html  NullLiteral.html  Package.html  Prefix.html  Program.html  Return.html  Statement.html  StringLiteral.html  Struct.html  StructAccess.html  While.html  (+2 more)
errors/: Cargo.toml
errors/src/: error.rs  lib.rs
examples/: extern.azl  factorial.azl  fib.azl  fizzbuzz.azl  hello_world.azl  impl.azl  maths.azl  prime.azl  wait.azl
parser/: Cargo.toml
parser/src/: lexer.rs  lib.rs  parser.rs  token.rs
spec/: Azula_spec.cr  azula_spec.cr  lexer_spec.cr  parser_spec.cr  spec_helper.cr  typechecker_spec.cr
spec/compiler/: array_spec.cr  assign_spec.cr  compiler_spec.cr  func_spec.cr  if_spec.cr  literals_spec.cr  spec_helper.cr  struct_spec.cr  while_spec.cr
src/: Azula.cr  azula.cr  codegen.rs  error.cr  errors.rs  main.rs  program.cr  symbols.cr  type.cr  typecheck.rs
src/ast/: assign.cr  ast.cr  block.cr  function.cr  identifier.cr  if.cr  infix.cr  literals.cr  program.cr  return.cr
src/azula/: lexer.cr  parser.cr  token.cr
src/compiler/: compiler.cr  typechecker.cr
src/parser/: ast.rs  lexer.cr  mod.rs  parser.cr  parser.lalrpop  token.cr
typecheck/: Cargo.toml
typecheck/src/: lib.rs  typecheck.rs
(+94 files in other folders)
