[package]
name = "azula_typecheck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azula_ast = { path = "../ast" }
azula_error = { path = "../errors" }
azula_type = { path = "../azula_type" }
maplit = "1.0.2"